update sample config

--- a/libre.dev.env
+++ b/libre.dev.env
@@ -1,13 +1,28 @@
-# -------------------------------: general
-REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
-REDIS_DB=0
-SCAN_COUNT=1000
-REDIS_TIMEOUT=5
+# -------------------------------: GENERAL
+# REDIS as a database
+REDIS_HOST = 127.0.0.1
+REDIS_PORT = 6379
+REDIS_DB = 0
+SCAN_COUNT = 1000
+REDIS_TIMEOUT = 5
+
+# log stack mean where log will be output
+# value can be combine of FILE, SYSLOG, CONSOLE separated by comma `,`
 LOGSTACKS=CONSOLE
-# LOGLEVEL # default is "INFO"
-#
-# -------------------------------: liberator
+# log level, default INFO
+LOGLEVEL=INFO
+
+# -------------------------------: LIBERATOR
+# LIBRE_STANDALONE_MODEL
+# LIBRE_BUILTIN_REDIS
+# LIBRE_CONTAINERIZED
+# LIBRE_BUILTIN_FIREWALL
+
+#--------------------------------------------------------
+# CALL RECOVERY CAPABILITY
+#--------------------------------------------------------
+CRC_CAPABILITY = False
+# when enable CRC_CAPABILITY, you need to declate postgress database
 # LIBRE_STANDALONE_MODEL
 # LIBRE_BUILTIN_REDIS
 # LIBRE_CONTAINERIZED
@@ -16,10 +31,17 @@ LOGSTACKS=CONSOLE
 # CRC_PGSQL_HOST // CRC_PGSQL_PORT // CRC_PGSQL_DATABASE // CRC_PGSQL_USERNAME // CRC_PGSQL_PASSWORD
 # HTTPCDR_ENDPOINTS # send cdr to HTTP server
 # DISKCDR_ENABLE    # write cdr to disk, default false
-#
-# -------------------------------: freswitch
-NODEID=devsbc
-LIBERATOR_API_URL=http://:8080
-ESL_HOST=
-ESL_PORT=8021
-ESL_PASSWORD=nopassword
+
+# -------------------------------: FREESWITCH
+LIBERATOR_API_URL = http://127.0.0.1:8080
+ESL_HOST = 127.0.0.1
+ESL_PORT = 8021
+ESL_PASSWORD = LIBRESBC
+
+#--------------------------------------------------------
+# HTTPCDR DATA: send cdr to HTTP server
+#--------------------------------------------------------
+
+#--------------------------------------------------------
+# CDR FILE: write cdr to disk, default false
+#--------------------------------------------------------
