--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,59 +2,82 @@
 # https://dockerlabs.collabnix.com/docker/cheatsheet
 # https://github.com/compose-spec/compose-spec/blob/master/spec.md]
 # # pwd=libresbc: docker-compose -f build/docker/docker-compose.yml up
+
 services:
-  redis:
-    hostname: redisdb
-    container_name: redisdb
+  rdb:
+    hostname: rdb
+    container_name: rdb
     restart: always
     image: redis:latest
-    ports:
-      - 6379:6379
-  liberator:
-    hostname: sbc-liberator
-    container_name: sbc-liberator
-    restart: always
-    image: hnimminh/libresbc-liberator:1.0.0
-    ports:
-      - 8080:8080
+    volumes:
+      - /opt/libresbc/rdb:/data
+    command: ['redis-server', '--loglevel', 'warning', '--dir', '/data', '--dbfilename', 'libresbc.rdb']
+    network_mode: host
     tty: true
     labels:
-      - libresbc.debian=bullseye
+      - libresbc.component=rdb
+      - libresbc.version=1.0.0
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
+      start_interval: 4s
+
+  liberator:
+    hostname: liberator
+    container_name: liberator
+    restart: always
+    image: hnimminh/libresbc-liberator:1.0.0-dev2
+    volumes:
+      - /var/log/libresbc/cdr:/var/log/libresbc/cdr
+      - /opt/libresbc/liberator:/opt/libresbc/liberator
+    command: ["/opt/libresbc/venv/bin/python3", "/opt/libresbc/liberator/main.py"]
+    network_mode: host
+    tty: true
+    labels:
       - libresbc.component=liberator
       - libresbc.version=1.0.0
-    environment:
-      REDIS_HOST: 164.90.201.161
-      REDIS_PORT: 6379
-      REDIS_DB: 0
-      SCAN_COUNT: 1000
-      REDIS_TIMEOUT: 5
-      LOGSTACKS: CONSOLE
-    depends_on: 
-      - redis
-  freeswitch:
-    hostname: sbc-freeswitch
-    container_name: sbc-freeswitch
+    env_file:
+      - /opt/libresbc/libre.env
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8080/heartbeat"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 45s
+      start_interval: 10s
+    depends_on:
+      rdb:
+        condition: service_healthy
+
+  switch:
+    hostname: switch
+    container_name: switch
     restart: always
-    image: hnimminh/libresbc-freeswitch:1.10.11
+    image: hnimminh/libresbc-freeswitch:1.10.12-13-trixie #hnimminh/libresbc-freeswitch:1.10.11
+    volumes:
+      - /var/log/libresbc/cdr:/var/log/libresbc/cdr
+      - /opt/libresbc/fsw.xml:/usr/local/etc/freeswitch/freeswitch.xml
+      - /opt/libresbc/callng:/opt/libresbc/callng
     command: ["/usr/local/bin/freeswitch", "-reincarnate"]
     network_mode: host
     tty: true
     labels:
-      - libresbc.debian=bullseye
-      - libresbc.component=freeswitch
+      - libresbc.component=switch
       - libresbc.version=1.0.0
+    env_file:
+      - /opt/libresbc/libre.env
     environment:
-      REDIS_HOST: 164.90.201.161
-      REDIS_PORT: 6379
-      REDIS_DB: 0
-      SCAN_COUNT: 1000
-      REDIS_TIMEOUT: 5
-      LOGSTACKS: CONSOLE
-      NODEID: A1SBC
-      LIBERATOR_API_URL: http://164.90.201.161:8080
-      ESL_HOST: 164.90.201.161
-      ESL_PORT: 8021
-      ESL_PASSWORD: nopassword
-      ESL_ACL: wan_v4.auto # localnet.auto, rfc1918.auto, rfc6598.auto, wan.auto, wan_v6.auto, wan_v4.auto, any_v6.auto, any_v4.auto, loopback.auto
-    depends_on: 
-      - liberator
+      NODEID: devsbc
+    depends_on:
+      liberator:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "fs_cli -H 127.0.0.1 -P 8021 -p LIBRESBC -x status | grep -q ^UP || exit 1"]
+      interval: 60s
+      timeout: 5s
+      retries: 3
+      start_period: 60s
+      start_interval: 30s
